--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             },
             created() {
                 const vm = this;
-                const url = 'https://api.kcg.gov.tw/api/service/get/9c8e1450-e833-499c-8320-29b36b7ace5c';
+                const url = './kaohsiung.json';
                 axios.get(url)
                     .then(function (response) {
                         // console.log(response.data.data.XML_Head.Infos.Info);
